--- a/brand-enhancement.html
+++ b/brand-enhancement.html
@@ -117,7 +117,7 @@
         </div>
         <div class="col-md">
           <div class="portfolio-caption">
-            <h4>Books, Magazines, Calendars</h4>
+            <h4>TRUSTSEAL®</h4>
             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
           </div>
         </div>
@@ -125,8 +125,9 @@
 	  
 	<div class="row">
         <div class="col-md-4 portfolio-item no-padding">
-            <h4>Consumer Goods Packaging</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
+            <h4>TRUSTCONCEPT®</h4>
+            <p class="text-muted">Product authentication
+Product piracy is as lucrative as the illegal drug trade - and just as dangerous: the plagiarism mafia causes $500 billion damage each year. That's three percent of the world’s trade. But brand manufacturers and dealers don’t just lose out on sales. The counterfeits deprive the brands of trust and thus damage an important business foundation.</p>
         </div>
 	    <div class="col-md-4 portfolio-item no-padding">
         <div class="row">
