BE Minor Update

--- a/brand-enhancement.html
+++ b/brand-enhancement.html
@@ -96,7 +96,7 @@
 	  <div class="row">
 	  <div class="col-md-8">
 	  <div class="video-embed">
-	  <video class="video-embed-item" width="" height="auto" preload="auto" autoplay="autoplay" loop="loop" muted="muted">
+	  <video class="video-embed-item" width="100%" height="auto" preload="auto" autoplay="autoplay" loop="loop" muted="muted">
 	  <source src="img/BE/K1_Trustseal_Protect_650.mp4" type="video/mp4">
 	  </video>
 	  </div>
