--- a/digital-metal.html
+++ b/digital-metal.html
@@ -93,37 +93,17 @@
         </div>
       </div>
       
-	  <div class="row">
-        <div class="col-md-4 portfolio-item no-padding">
-          <img class="img-fluid" src="img/graphics/gr01.jpg" alt="">
-        </div>
-        <div class="col-md-4 portfolio-item no-padding">
-          <div class="row">
-            <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/graphics/KURZ_0601_074.jpg" alt="">
-            </div>
-            <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/graphics/KURZ_0601_064.jpg" alt="">
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/graphics/KURZ_0601_072.jpg" alt="">
-            </div>
-            <div class="col-md-6 no-padding">
-              <img class="img-fluid" src="img/graphics/KURZ_0601_052.jpg" alt="">
-            </div>
-          </div>
-        </div>
-        <div class="col-md">
-          <div class="portfolio-caption">
-            <h4>Books, Magazines, Calendars</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
-          </div>
-        </div>
-    </div>
 	  
-	<div class="row">
+	  
+	  
+	  
+	  <div class="row">
+        <div class="col-md">
+          <iframe width="100%" height="100%" src="https://www.youtube.com/embed/Q-m5FJELIuI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </div>
+	  
+	<div class="row mt-md-5">
         <div class="col-md-4 portfolio-item no-padding">
             <h4>Consumer Goods Packaging</h4>
             <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
