--- a/ttr-coding.html
+++ b/ttr-coding.html
@@ -103,7 +103,7 @@
 		   <div class="col-md-4">
           <div class="portfolio-caption">
             <h4>Thermal-transfer foils Product Lines</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. &#8226 &nbsp Wax Ribbons <br> &#8226 &nbsp Wax-Resin Ribbons <br> &#8226 &nbsp Resin Ribbons <br> &#8226 &nbsp Near-Edge Ribbons <br> &#8226 &nbsp Special Applications</p>
+            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br> &#8226 &nbsp Wax Ribbons <br> &#8226 &nbsp Wax-Resin Ribbons <br> &#8226 &nbsp Resin Ribbons <br> &#8226 &nbsp Near-Edge Ribbons <br> &#8226 &nbsp Special Applications</p>
           </div>
         </div>
 		
