DM Updates (II)

--- a/digital-metal.html
+++ b/digital-metal.html
@@ -178,7 +178,9 @@
 			</div>
 			</div>
 			</div>
-			
+
+
+
 	<div class="row mt-md-5">
 		<div class="col-md-8">
 		<iframe width="100%" height="100%" src="https://www.youtube.com/embed/aUjZK2GHO1Y" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -196,15 +198,108 @@
 		 <li>Consignment stock of foil/pay per stamp model</li>
 		 <li>Automatic foil reordering</li>
 		</ul>
+		</div>
+		</div>
+			
+	<div class="container">
+	<div class="row mt-md-5">
+    <div class="col-md-7">
+      <h6>DM-JETLINER® Specifications</h6>
+      <dl class="colon">
+        <dt>Length/width/height</dt>
+        <dd>2.5 m/1.5 m/1.8m</dd>
+        <dt>Stamping speed</dt>
+        <dd>mechanical speed adjustable to 2,400 sheets/h (B2 format)</dd>
+        <dt>Heat output</dt>
+        <dd>at 30 m/min: approx. 6 kW</dd>
+        <dt>Stamping temperature</dt>
+        <dd>40 °C – 220 °C (IR heating system)</dd>
+        <dt>Electrical requirements</dt>
+        <dd>400 V, 50/60 Hz, 3 phases with N, P, E, 32 A fuse, 13 kW</dd>
+        <dt>Compressed air</dt>
+        <dd>max. 6.5 bar (oil-free), hose size Ø = 10 mm, 300 l/min</dd>
+        <dt>Foil width</dt>
+        <dd>550 mm</dd>
+        <dt>Foil core</dt>
+        <dd>3"</dd>
+		<dt>Paper weights</dt>
+        <dd>120 g/m² – 350 g/m²</dd>
+		<dt>Paper formats</dt>
+        <dd>min. 320 x 460 mm, max. 560 x 750 mm</dd>
+		<dt>Optional</dt>
+        <dd>palette feed</dd>
+      </dl>
+    </div>
+  
+
+	 <div class="col-md-5">
+          <img class="img-fluid" src="img/DM/DM-JETLINER_0032.png" alt="">
+	 </div>
+	</div>
+	</div>
+
+
+
+	</br>
+	<div class="row mt-md-5">
+		<div class="col-md-4">
+		<h5>DM-LUXLINER®</h5>
+		 <ul class="text-muted">
+		  <li>Very easy to set up</li>
+		  <li>Good results as of the first sheet</li>
+		  <li>Up to 2,400 B2 sheets/hour (depending on print and substrate)</li>
+	  	  <li>Foil and machine from one source</li>
+		  <li>Custom-made hologram foils available (tickets, etc.)</li>
+		  <li>Foil is overprintable (imitate/replace offset coldfoil)</li>
+		  <li>Consignment stock of foil/pay-per-stamp model</li>
+		  <li>Automatic foil reordering</li>
+		 </ul>
+		</div>
+		<div class="col-md-8">
+		 <iframe width="100%" height="100%" src="https://www.youtube.com/embed/GTbs6Jno3E0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</div>
 		</div>	
 			
 	
+			
+	<div class="container">
 	<div class="row mt-md-5">
-	 <div class="col-md portfolio-item no-padding">
-          <img class="img-fluid" src="img/DM/DM-JETLINER_0032.jpg" alt="">
+    <div class="col-md-7">
+      <h6>DM-LUXLINER® Specifications</h6>
+      <dl class="colon">
+        <dt>Length/width/height</dt>
+        <dd>2.5 m/1.5 m/1.8m</dd>
+        <dt>Stamping speed</dt>
+        <dd>mechanical speed adjustable to 2,400 sheets/h (B2 format)</dd>
+        <dt>Heat output</dt>
+        <dd>at 30 m/min: approx. 6 kW</dd>
+        <dt>Stamping temperature</dt>
+        <dd>40 °C – 220 °C (IR heating system)</dd>
+        <dt>Electrical requirements</dt>
+        <dd>400 V, 50/60 Hz, 3 phases with N, P, E, 32 A fuse, 13 kW</dd>
+        <dt>Compressed air</dt>
+        <dd>max. 6.5 bar (oil-free), hose size Ø = 10 mm, 300 l/min</dd>
+        <dt>Foil width</dt>
+        <dd>550 mm</dd>
+        <dt>Foil core</dt>
+        <dd>3"</dd>
+		<dt>Paper weights</dt>
+        <dd>120 g/m² – 350 g/m²</dd>
+		<dt>Paper formats</dt>
+        <dd>min. 320 x 460 mm, max. 560 x 750 mm</dd>
+		<dt>Optional</dt>
+        <dd>palette feed</dd>
+      </dl>
+    </div>
+  
+
+	 <div class="col-md-5">
+          <img class="img-fluid" src="img/DM/DM-LUXLINER_20602.png" alt="">
 	 </div>
 	</div>
-	  
+	</div>
+
+
   </section>
 
   <!-- Footer -->
