--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
   <div class="row">
   <div class="row mt-5">
     <div class="col-sm-5">
-		<img src="img/card/c01.jpg" class="img-fluid">
+		<img src="img/product/c01.jpg" class="img-fluid">
     </div>
     <div class="offset-sm-1 col-sm-6">
 			<p><strong> Card Technology & Application Machines </strong></p>
