Index Info Updates

--- a/index.html
+++ b/index.html
@@ -186,12 +186,10 @@
 	<div class="row mt-5">
     <div class="col-sm-6">
 	<p><strong> Stamping Tools </strong></p>
-			<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-			Fusce nulla arcu, laoreet eu tortor in, finibus tempus neque.
-			Phasellus imperdiet porta dolor nec eleifend.
-			Curabitur et arcu cursus, lobortis elit et, facilisis elit.
-			Nulla finibus ultrices sapien, non pretium nisi posuere sit amet. Suspendisse potenti.
-			Mauris pharetra eu lacus non.</P>
+			<p class="text-muted">Modern processes allow high-quality decorations in the packaging industry. Labels, folding carton, book covers, box wraps, greeting cards, and much more could be decorated.</p>
+			<p class="text-muted">Our dies are highly precise, easy to use and able to produce sharp contour stampings, all of which that you would need to impress your audience.</p>
+			<p class="text-muted">Transform your design ideas into unique stampings and benefit from a variety of dies, relief styles and pattern options with our dies and tools!</p>
+
 		
     </div>
     <div class="offset-sm-1 col-sm-5">
@@ -208,12 +206,9 @@
     </div>
     <div class="offset-sm-1 col-sm-6">
 			<p><strong> Thermal-Transfer Ribbons & Coding Foils</strong></p>
-			<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-			Fusce nulla arcu, laoreet eu tortor in, finibus tempus neque.
-			Phasellus imperdiet porta dolor nec eleifend.
-			Curabitur et arcu cursus, lobortis elit et, facilisis elit.
-			Nulla finibus ultrices sapien, non pretium nisi posuere sit amet. Suspendisse potenti.
-			Mauris pharetra eu lacus non.</P>
+			<p class="text-muted">Thermal-transfer ink ribbons are also called thermal transfer foils, carbon ribbons, and TTF or TTR (thermal-transfer ribbon).</p>
+			<p class="text-muted">Depending on the purpose or project requirements, the correct type of ink ribbons should be used for the best results.
+			Different type of surface to be printed, the durability and security requirements of the print are some important considerations when choosing the correct thermal-transfer ink ribbon.</p>
             
     </div>
   </div>
@@ -660,7 +655,7 @@
 			  <p class="h6 text-white-50">Cau Giay District,</p>
 			  <p class="h6 text-white-50 mb-4">Hanoi, Vietnam.</p>
 			  <p class="h6 text-white-50 mb-4">+(84)24 6282 2821</p>
-			  <p class="h6 text-white-50">vanessa.nguyen@mvlienminh.com.vn</p>
+			  <p class="h6 text-white-50">mvlienminh@mvlienminh.com.vn</p>
 			  </div>
 				<div class="col-md-6">
 			   <form id="contactForm" name="sentMessage" novalidate="novalidate">
