Cold Hot Foil + Cold Foil Updates
Split Graphics into Cold and Hot foil

--- a/hotstamp.html
+++ b/hotstamp.html
@@ -46,7 +46,8 @@
           <li class="nav-item dropdown">
             <a class="nav-link js-scroll-trigger" href="index.html#product">Application<span class="dropdown-toggle" data-toggle="dropdown"></a>
             <div class="dropdown-menu">
-              <a class="nav-link dropdown-item" href="graphic.html">Graphics</a>
+              <a class="nav-link dropdown-item" href="hotstamp.html">Hot Stamping</a>
+			  <a class="nav-link dropdown-item" href="cftransfer.html">Cold Foil Transfer</a>
               <a class="nav-link dropdown-item" href="plastic.html">Plastics</a>
               <a class="nav-link dropdown-item" href="textile.html">Textile</a>
               <a class="nav-link dropdown-item" href="cosmetic.html">Cosmetics</a>
@@ -69,7 +70,7 @@
     </div>
   </nav>
 
-  <header class="graphhead">
+  <header class="hfhead">
     <div class="container">
       <div class="intro-text">
       </div>
@@ -81,8 +82,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase heading-underline">Graphics</h2>
-          <h3 class="section-subheading text-muted">The unrivaled technology for surface feel and attraction</h3>
+          <h2 class="section-heading text-uppercase heading-underline">Hot Stamping</h2>
+          <h3 class="section-subheading">the most beautiful of all finishes. Offering incomparable gloss, unbeatable tactile quality and extraordinary 3D effects, this high-performance process produces high-impact results that no other print medium can achieve</h3>
           <!--Graphic hot stamping foil Kurz hot stamping foil can apply on all materials, from simple to complex.
           Although on paper, decals, labels PP, PE, rough paper, OPP or UV varnish, Kurz products always result in definition, fine and attractive performance.
           Adhere to the high quality standards of the Kurz group, products are excellent quality with high-gloss, scratch resistance and good compatibility with modern printing technology.
@@ -92,6 +93,9 @@
           Colorit: Pigmented matt, high gloss transparent or black, pearl gloss.-->
         </div>
       </div>
+	  	  
+	  
+	  
       <div class="row">
         <div class="col-md-4 portfolio-item no-padding">
           <img class="img-fluid" src="img/graphics/gr01.jpg" alt="">
@@ -178,6 +182,12 @@
           <img class="img-fluid" src="img/graphics/gr13.jpg" alt="">
         </div>
       </div>
+
+	<br>
+	<br>
+	
+
+
 
 	  <!--
 	  <div class="col-md">
