--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
           <li class="nav-item dropdown">
             <a class="nav-link js-scroll-trigger" href="index.html#application">Application<span class="dropdown-toggle" data-toggle="dropdown"></a>
             <div class="dropdown-menu">
-              <a class="nav-link dropdown-item" href="graphic.html">Graphics</a>
+              <a class="nav-link dropdown-item" href="hotstamp.html">Hot Stamping</a>
+			  <a class="nav-link dropdown-item" href="cftransfer.html">Cold Foil Transfer</a>
               <a class="nav-link dropdown-item" href="plastic.html">Plastics</a>
               <a class="nav-link dropdown-item" href="textile.html">Textile</a>
 			  <a class="nav-link dropdown-item" href="cosmetic.html">Cosmetics</a>
