Cft Updates (II)

--- a/cftransfer.html
+++ b/cftransfer.html
@@ -164,7 +164,99 @@
         </div>
         </div>
 
+	
+	</br>
+	<hr></hr>
+	</br>
+
+		<div class="row">
+		<div class="col-md-4">
+		  <div class="portfolio-caption">
+            <h4 class="text-uppercase">Application Machines</h4>
+            <p>DISTORUN® – New, independent machine module for labeling machines.</p>
+			<p class="text-muted">DISTORUN® is a unique module for the processing of single images and endless decors in cold foiling transfer.
+			Cold foil single images can be accurately positioned. The section between two images can now be used for efficient foil usage.</p>
+			<br>
+			<p class="text-muted">A print mark reader notes the positions of the print marks. Recording the track speed and the print mark positions is part of the module and is fitted onto the printing press.
+			DISTORUN® operates separately and is not affected by the controls of the printing press. </p>
+          </div>
+		  </div>
+		  <div class="col-md-8 portfolio-item no-padding">
+          <img class="img-fluid" src="img/cft/Distorun_097.jpg" alt="">
+        </div>
+		  </div>
 		
+		
+		
+		<div class="row">
+		<div class="col-md-6 portfolio-item no-padding">  
+			<img class="img-fluid" src="img/cft/Distorun_031.png" alt="">
+        </div>  
+		<div class="col-md-6 portfolio-item">  
+		<br>
+		<br>
+			<h4 class="text-uppercase">Lorem ipsum</h4>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+			<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sit amet elementum neque, in blandit enim. </p>
+		</div>
+		
+		
+		<div class="row">
+		<div class="col-md-4 portfolio-item">  
+			<br>
+			<h4>General Features</h4>
+            <ul>
+			<li>Processing of cold foil single images and endless decors.</li>
+			<li>No need for any modification of the printing machine.</li>
+			<li>Synchronized with the printing machine.</li>
+			<li>Rail system makes possible different positions to print unit.</li>
+			<li>Foil tension control on unwind and rewind.</li>
+			<li>Foil can be reused and remain true to register.</li>
+			<li>Available in 330 mm, 420 mm and 520 mm, with one, two and three foil stripes.</li>
+			</ul>
+        </div>  
+		<div class="col-md-8 portfolio-item">
+			<img class="img-fluid" src="img/cft/Distorun_114.png" alt="">
+		</div>
+		
+		
+		
+		<div class="container">
+		<br>
+		  <div class="row mt-md-5">
+		  <div class="col-md-6">
+          <img class="img-fluid" src="img/cft/Distorun_093.jpg" alt="">
+	 </div>
+		  <div class="col-md-6">
+			<h6>Specifications - 330 mm model with 3 foil tracks</h6>
+			<dl class="colon">
+        <dt>Max. working speed:<p class="text-muted">Synchronized with the printing unit</p></dt>
+        <dd>≤ 80 m / min</dd>
+        <dt>Accuracy of positioning image:
+		<p class="text-muted">Depends on the distancebetween two images</p></dt>
+        <dd>≤ 0.30 mm</dd>
+        <dt>Min. cold foil width:</dt>
+        <dd>30 mm</dd>
+        <dt>Max. cold foil width</dt>
+        <dd>330 mm</dd>
+        <dt>Rewind / unwind maximum diameter</dt>
+        <dd>350 mm (3" core)</dd>
+        <dt>Max. number of foil tracks</dt>
+        <dd>3</dd>
+        <dt>Electrical requirements</dt>
+        <dd>3 x 400V AC, 50/60Hz, 6kW</dd>
+        <dt>Width</dt>
+        <dd>720 mm</dd>
+		<dt>Depth</dt>
+        <dd>1400 mm</dd>
+		<dt>Height</dt>
+        <dd>650 mm</dd>
+		<dt>Weight</dt>
+        <dd>380 kg</dd>
+      </dl>
+    </div>
+	</div>
+	</div>
 </section>
 
 	  <!--
