Cft Content Rearrg.

--- a/cftransfer.html
+++ b/cftransfer.html
@@ -172,8 +172,9 @@
 		<div class="row">
 		<div class="col-md-4">
 		  <div class="portfolio-caption">
+		  <br>
             <h4 class="text-uppercase">Application Machines</h4>
-            <p>DISTORUN® – New, independent machine module for labeling machines.</p>
+            <p>DISTORUN® – Independent module for labeling machines.</p>
 			<p class="text-muted">DISTORUN® is a unique module for the processing of single images and endless decors in cold foiling transfer.
 			Cold foil single images can be accurately positioned. The section between two images can now be used for efficient foil usage.</p>
 			<br>
@@ -181,29 +182,30 @@
 			DISTORUN® operates separately and is not affected by the controls of the printing press. </p>
           </div>
 		  </div>
-		  <div class="col-md-8 portfolio-item no-padding">
-          <img class="img-fluid" src="img/cft/Distorun_097.jpg" alt="">
+		  <div class="col-md-1">
+		  </div>
+		  <div class="col-md-5 portfolio-item">
+          <img class="img-fluid" src="img/cft/Distorun_031.png" alt="">
         </div>
 		  </div>
 		
-		
-		
+		<br>
+		<br>
 		<div class="row">
-		<div class="col-md-6 portfolio-item no-padding">  
-			<img class="img-fluid" src="img/cft/Distorun_031.png" alt="">
+		<div class="col-md-8 portfolio-item">  
+			<img class="img-fluid" src="img/cft/Distorun_097.jpg" alt="">
         </div>  
-		<div class="col-md-6 portfolio-item">  
-		<br>
-		<br>
+		<div class="col-md-4 portfolio-item">  
 			<h4 class="text-uppercase">Lorem ipsum</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
 			<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sit amet elementum neque, in blandit enim. </p>
 		</div>
+		</div>
 		
-		
+		<br>
+		<br>
 		<div class="row">
 		<div class="col-md-4 portfolio-item">  
-			<br>
 			<h4>General Features</h4>
             <ul>
 			<li>Processing of cold foil single images and endless decors.</li>
@@ -214,10 +216,12 @@
 			<li>Foil can be reused and remain true to register.</li>
 			<li>Available in 330 mm, 420 mm and 520 mm, with one, two and three foil stripes.</li>
 			</ul>
-        </div>  
+        </div> 
 		<div class="col-md-8 portfolio-item">
 			<img class="img-fluid" src="img/cft/Distorun_114.png" alt="">
 		</div>
+		</div>
+		
 		
 		
 		
