--- a/index.html
+++ b/index.html
@@ -324,10 +324,24 @@
                <!-- <i class="fas fa-plus fa-3x"></i>-->
               </div>
             </div>
-            <a href="graphic.html"><img class="img-fluid" src="img/application/1graphic.jpg" alt=""></a>
+            <a href="hotstamp.html"><img class="img-fluid" src="img/application/1graphic.jpg" alt=""></a>
           </a>
           <div class="portfolio-caption">
-            <h4>Graphics</h4>
+            <h4>Hot Stamping</h4>
+         <!--   <p class="text-muted">Illustration</p>-->
+          </div>
+        </div>
+		<div class="col-md-4 col-sm-6 portfolio-item">
+          <a class="portfolio-link" data-toggle="modal" href="#portfolioModal1">
+            <div class="portfolio-hover">
+              <div class="portfolio-hover-content">
+               <!-- <i class="fas fa-plus fa-3x"></i>-->
+              </div>
+            </div>
+            <a href="cftransfer.html"><img class="img-fluid" src="img/application/chocito_10884.jpg" alt=""></a>
+          </a>
+          <div class="portfolio-caption">
+            <h4>Cold Foil Transfer</h4>
          <!--   <p class="text-muted">Illustration</p>-->
           </div>
         </div>
