Added small-text to custom.scss

--- a/cftransfer.html
+++ b/cftransfer.html
@@ -234,10 +234,10 @@
 		  <div class="col-md-6">
 			<h6>Specifications - 330 mm model with 3 foil tracks</h6>
 			<dl class="colon">
-        <dt>Max. working speed:<p class="text-muted">Synchronized with the printing unit</p></dt>
+        <dt>Max. working speed:<p class="text-muted text-small">Synchronized with the printing unit</p></dt>
         <dd>≤ 80 m / min</dd>
         <dt>Accuracy of positioning image:
-		<p class="text-muted">Depends on the distance between two images</p></dt>
+		<p class="text-muted text-small">Depends on the distance between two images</p></dt>
         <dd>≤ 0.30 mm</dd>
         <dt>Min. cold foil width:</dt>
         <dd>30 mm</dd>
