--- a/cftransfer.html
+++ b/cftransfer.html
@@ -95,8 +95,9 @@
       <div class="row">
         <div class="col-md-5 portfolio-item">
           <h4 class="text-uppercase">Cold Foil Transfer</h4>
-          <p class="text-muted">Cold foil technology can be flexibly integrated into any printing process. The cold foil is simply applied as a "fifth color” to the print image. This opens up many new design possibilities.</p>
-        </div>
+          <p class="text-muted">The process of cold foil transfer involves applying UV-curable adhesive onto the image area without the need of using dies. After the foil has been in contact with the specific area, the adhesive is cured by UV light and then the carrier film is removed.</p>
+		  <p class="text-muted">Cold foil can be flexibly integrated into any printing process as the cold foil is simply applied as a “fifth colour” to the print image. Overprinting offers free choice of colours. The base colour is usually silver. The cold foil can then be overprinted with any process colours or other colours. A variety of new metallic colour tones can also be created in this manner.</p>
+		</div>
 		<div class="col-md-1 portfolio-item">        
               
         </div>
@@ -122,8 +123,14 @@
 		<div class="col-md-5 portfolio-item">
 		<br>
 		<br>
-		<h4>KURZ Foil Solutions for a Brilliant Metallic Appearance:</h4>
-		<p class="text-muted">special development for the cold foiling process with thinner metallization fine definition with easy release suitable for fine line and broad area stamping, but also for half tones high gloss good adhesion on most of UV adhesives used in the cold foiling process</p>
+		<h4>Expand your design scope with Cold Foiling</h4>		
+		<ul>
+		<li>Flexibility when creating designs</li>
+		<li>High register accuracy</li>
+		<li>Very fine elements, negative lettering, rasters and large areas</li>
+		<li>Metallic half-tone effects</li>
+		<li>Optimal foil-to-print register</li>
+		<li>The substrate structure is retained, e.g. a linen effect texture</li></ul>
         </div>
 		</div>
 		
@@ -196,9 +203,9 @@
 			<img class="img-fluid" src="img/cft/Distorun_097.jpg" alt="">
         </div>  
 		<div class="col-md-4 portfolio-item">  
-			<h4 class="text-uppercase">Lorem ipsum</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-			<p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. In sit amet elementum neque, in blandit enim. </p>
+			<h4 class="text-uppercase">The Coldfoil Module</h4>
+            <p class="text-muted">DISTORUN® has been developed and designed with modern servo control technology. A specially-designed software program allows for individual frame positioning and efficient use of foil. </p>
+			<p class="text-muted">DISTORUN® is placed on the rail system of the printing machine and the track speed of the printed substrate is recorded by a separate rotary encoder.</p>
 		</div>
 		</div>
 		
