--- a/hotstamp.html
+++ b/hotstamp.html
@@ -83,7 +83,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase heading-underline">Hot Stamping</h2>
-          <h3 class="section-subheading">the most beautiful of all finishes. Offering incomparable gloss, unbeatable tactile quality and extraordinary 3D effects, this high-performance process produces high-impact results that no other print medium can achieve</h3>
+          <h3 class="section-subheading">The most beautiful of all finishes. Hot stamping foils offers incomparable gloss, unique tactile quality and impressive 3D effects. No other print process comes close in comparison to the performance of hot stamping.</h3>
           <!--Graphic hot stamping foil Kurz hot stamping foil can apply on all materials, from simple to complex.
           Although on paper, decals, labels PP, PE, rough paper, OPP or UV varnish, Kurz products always result in definition, fine and attractive performance.
           Adhere to the high quality standards of the Kurz group, products are excellent quality with high-gloss, scratch resistance and good compatibility with modern printing technology.
@@ -120,16 +120,17 @@
         </div>
         <div class="col-md">
           <div class="portfolio-caption">
-            <h4>Books, Magazines, Calendars</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
-          </div>
+            <h4>Books, Magazines, Calendars, Namecards</h4>
+            <p class="text-muted">Application of hot stamping foil is possible on a wide range of substrates. </p>
+			<p class="text-muted">Smaller order and shorter runs is also economical</p>
+		  </div>
         </div>
       </div>
 
       <div class="row">
         <div class="col-md-4 portfolio-item">
           <h4>Consumer Goods Packaging</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
+          <p class="text-muted">Hot foil stamping is one of the high-visibility enhancements for product packaging. Not only that it will help attract consumer attention faster and keep them longer than products with ordinary packaging, your product will also look more elegant. Which usually would result in an increase in sales, with an insignificant increase in cost.</p>
         </div>
         <div class="col-md-4 portfolio-item no-padding">
           <img class="img-fluid" src="img/graphics/gr11.jpg" alt="">
