--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     </div>
     <div class="offset-sm-1 col-sm-6">
 			<p><strong> Card Technology & Application Machines </strong></p>
-			<p class="text-muted">Kurz is one of the leading suppliers of security technologies and components for cards. Our expertise revolves around credit, bank and payment, customer, loyalty or prepaid cards, and also ID documents such as identification cards or driving licenses.</P>
+			<p class="text-muted">Kurz is one of the leading suppliers of security technologies and components for cards. Our expertise revolves around credit, bank, payment, customer, loyalty, prepaid cards, and also ID documents such as identification cards or driving licenses.</P>
             <p class="text-muted">The card component that we supply includes, Magnetic Foils, Signature Foils, Holographic OVDs, Tipping Foils, Cold Indent Foils, and also Scratch-Off Foils.</p>
 			<p class="text-muted">We also supply application machines that meet a diverse range of card requirements.</p>
 
