--- a/plastic.html
+++ b/plastic.html
@@ -94,6 +94,7 @@
         </div>
       </div>
 
+
       <div class="row-special">
         <div class="col-md-4 portfolio-item no-padding">
           <img class="img-fluid" src="img/plastics/pl01.jpg" alt="">
@@ -116,20 +117,43 @@
             </div>
           </div>
         </div>
-        <div class="col-md">
+		<div class="col-md-4">
           <div class="portfolio-caption">
             <h4>Automotive</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
-          </div>
+            <p class="text-muted">Being the experts for challenging hot stamping projects with complex geometry using genuine chrome, we provide a convincing alternative to electroplating with our solution of specially developed chrome foils and customized machines.</p>
+            <p class="text-muted">Benefits:</p>
+			<ul class="text-muted">
+			<li><strong>Save up to 65% cost</strong> with KURZ chrome finishes compared to electroplating</li>
+			<li>Top-quality <strong>chrome shine</strong> and <strong>optimum durability</strong></li>
+			<li>Unique technology combining a high-tech hot stamping machine with <strong>genuine chrome coating</strong></li>
+			<li>Cost efficient partial chrome decoration can only be done with hot stamping technology</li>
+			</ul>
+		  </div>
         </div>
-      </div>
+		</div>
+		 <div class="row">
+		<div class="col-md-4 portfolio-item no-padding">
+          <img class="img-fluid" src="img/plastics/Fiat500.jpg" alt="">
+        </div>
+		<div class="col-md-4 portfolio-item no-padding">
+          <img class="img-fluid" src="img/plastics/SHousing.jpg" alt="">
+        </div>
+		</div>
+      
 
 	<br/>
       <div class="row">
         <div class="col-md-4 portfolio-item no-padding">
           <h4>Consumer Electronics & Home Appliances</h4>
-          <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
-        </div>
+          <p class="text-muted">No matter what design you opt for, we can deliver. We are the <strong>only company in the world that can offer all finishing processes from a single source:</strong></p>
+        <ul class="text-muted">
+		<li>IMD (In-Mold-Decoration)</li>
+		<li>Insert Molding</li>
+		<li>PMD technology (PC screen printing)</li>
+		<li>IPD-Skin (Individual Post Decoration Skin)</li>
+		<li>and hot stamping.</li>
+		</ul>
+		</div>
         <div class="col-md-8 portfolio-item no-padding">
           <div class="row-special">
             <div class="col-md-4 no-padding">
@@ -182,20 +206,20 @@
   
 	<br/>
         <div class="row-special">
-		 <div class="col-md-8 portfolio-item no-padding">
+		 <div class="col-md-8 portfolio-item">
 		  <div class="row-special">
-		   <div class="col-md-6 no-padding">
+		   <div class="col-md-6">
             <img class="img-fluid" src="img/plastics/IC01.jpg" alt="">
            </div>
-           <div class="col-md-6 no-padding">
+           <div class="col-md-6">
 			<img class="img-fluid" src="img/plastics/IC02.jpg" alt="">
 		   </div>
 		  </div>
 		  <div class="row-special">
-           <div class="col-md-6 no-padding">
+           <div class="col-md-6">
             <img class="img-fluid" src="img/plastics/IC03.jpg" alt="">
            </div>
-            <div class="col-md-6 no-padding">
+            <div class="col-md-6">
             <img class="img-fluid" src="img/plastics/IC04.jpg" alt="">
             </div>
 		  </div>
@@ -203,8 +227,15 @@
 		<div class="col-md">
           <div class="portfolio-caption">
             <h4>PolyIC</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
-          </div>
+			<p class="text-muted">Compared with complex OCA technology, our new integration process for machine-based sensor application saves time and money while maintaining optimum functional reliability. The sensors are firmly bonded to the component, along with their tail, and are then immediately functional.</p>
+			<h6>Benefits</h6>
+			<ul class="text-muted">
+			<li>Smart and functional plastics with PolyIC touch sensors</li>
+			<li>Even curved surfaces are possible with PolyTC®</li>
+			<li>PolyTC® silver metal mesh offers better conductivity than ITO</li>
+			<li>Best cost ratio due to connector and tail integration</li>
+			</ul>
+		  </div>
         </div>
 		</div>
 
@@ -226,7 +257,7 @@
           <div class="col-md-4">
 		  <div class="portfolio-caption">
             <h4>Stationary</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
+            <p class="text-muted">The same concept of hot stamping applied onto stationeries.</p>
           </div>
 		  </div>
 	  <div class="col-md-4 portfolio-item no-padding">
