--- a/hotstamp.html
+++ b/hotstamp.html
@@ -122,7 +122,7 @@
           <div class="portfolio-caption">
             <h4>Books, Magazines, Calendars, Namecards</h4>
             <p class="text-muted">Application of hot stamping foil is possible on a wide range of substrates. </p>
-			<p class="text-muted">Smaller order and shorter runs is also economical</p>
+			<p class="text-muted">Even small order and short runs can also be unique, beautiful and cost effective.</p>
 		  </div>
         </div>
       </div>
@@ -130,7 +130,7 @@
       <div class="row">
         <div class="col-md-4 portfolio-item">
           <h4>Consumer Goods Packaging</h4>
-          <p class="text-muted">Hot foil stamping is one of the high-visibility enhancements for product packaging. Not only that it will help attract consumer attention faster and keep them longer than products with ordinary packaging, your product will also look more elegant. Which usually would result in an increase in sales, with an insignificant increase in cost.</p>
+          <p class="text-muted">Hot foil stamping is one of the high-visibility enhancements for product packaging. Not only that it will help attract consumer attention faster and keep them longer than products with ordinary packaging, your product will also look more elegant. Which usually would result in an increase in sales, with only a tiny increase in cost.</p>
         </div>
         <div class="col-md-4 portfolio-item no-padding">
           <img class="img-fluid" src="img/graphics/gr11.jpg" alt="">
