--- a/textile.html
+++ b/textile.html
@@ -95,20 +95,21 @@
       </div>
       
 	  <div class="row">
-        <div class="col-md-4 portfolio-item">
+        <div class="col-md-4 portfolio-item no-padding">
 		<div class="row">
           <img class="img-fluid" src="img/Textile/tx01.jpg" alt="">
         </div>
 		</div>
-        <div class="col-md-4 portfolio-item">
+        <div class="col-md-4 portfolio-item no-padding">
           <div class="row">
             <img class="img-fluid" src="img/Textile/tx02.jpg" alt="">
           </div>
         </div>
-        <div class="col-md">
+        <div class="col-md-4">
           <div class="portfolio-caption">
             <h4>Fashion</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
+            <p class="text-muted">The transfer of the foil to the substrate can be accomplished by up-and-down process, heat transfer calenders or single roll calenders. For this application the textile has to be pre-treated with suitable adhesives.</p>
+			<p class="text-muted">The transfer process bonds the foil to the pre-treated textile or artificial leather. In the case of textiles the adhesive of the foil will only adhere to wherever the adhesive is printed.</p>
           </div>
         </div>
 		</div>
