Minor Offset Changes

--- a/plastic.html
+++ b/plastic.html
@@ -118,7 +118,7 @@
           </div>
         </div>
 		<div class="col-md-4">
-          <div class="portfolio-caption">
+          <div class="offset-sm-1 portfolio-caption">
             <h4>Automotive</h4>
             <p class="text-muted">Being the experts for challenging hot stamping projects with complex geometry using genuine chrome, we provide a convincing alternative to electroplating with our solution of specially developed chrome foils and customized machines.</p>
             <p class="text-muted">Benefits:</p>
