--- a/ttr-coding.html
+++ b/ttr-coding.html
@@ -83,7 +83,8 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase heading-underline">TTR & Coding</h2>
-          <h3 class="section-subheading text-muted">Thermal-transfer foils in your corporate color. Anyone can do black. Color print catches eyes.</h3>
+          <h3 class="section-subheading text-muted">Thermal-transfer know-how from Germany</h3>
+		  
 		  <!--Graphic hot stamping foil Kurz hot stamping foil can apply on all materials, from simple to complex.
 		  Although on paper, decals, labels PP, PE, rough paper, OPP or UV varnish, Kurz products always result in definition, fine and attractive performance.
 		  Adhere to the high quality standards of the Kurz group, products are excellent quality with high-gloss, scratch resistance and good compatibility with modern printing technology.
@@ -104,7 +105,14 @@
 		   <div class="col-md-4">
           <div class="portfolio-caption">
             <h4>Thermal-transfer foils Product Lines</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. <br> &#8226 &nbsp Wax Ribbons <br> &#8226 &nbsp Wax-Resin Ribbons <br> &#8226 &nbsp Resin Ribbons <br> &#8226 &nbsp Near-Edge Ribbons <br> &#8226 &nbsp Special Applications</p>
+            <p class="text-muted">The KURZ Group is a globally active corporation and the only producer of thermal-transfer foils in Germany. We have been producing ink ribbons for thermal-transfer printing since 1991. Our products and services are available worldwide.</p>
+			<ul>
+			<li>Wax Ribbons</li>
+			<li>Wax-Resin Ribbons</li>
+			<li>Resin Ribbons</li>
+			<li>Near-Edge Ribbons</li>
+			<li>Special Applications</li>
+			</ul>
           </div>
         </div>
 		
@@ -118,7 +126,11 @@
 		  <div class="col-md-4">
           <div class="portfolio-caption">
             <h4>General Uses</h4>
-            <p class="text-muted">&#8226 &nbsp Barcodes <br> &#8226 &nbsp Labels <br> &#8226 &nbsp  <br> &#8226 &nbsp  <br> &#8226 &nbsp </p>
+            <ul>
+			<li>Barcodes</li>
+			<li>Labels</li>
+			<li>Clothing Labels</li>
+			</ul>
           </div>
         </div>
 		</div>		  
@@ -152,7 +164,9 @@
           <div class="portfolio-caption">
             <h4>Color your brand®</h4>
             <p class="text-muted">Thermal-transfer foils in your corporate color. Anyone can do black. Color print catches eyes. Also available in metalized colours.</p>
-          </div>
+			<p class="text-muted">That's why KURZ has created color your brand®. We will develop thermal-transfer ink ribbons for you in your exclusive corporate color, even if it involves very special color blends.</p>
+            <p class="text-muted">Our technology helps enhance your market presence. <strong>Labels and barcodes in corporate colors make your products even more unique.</strong></p>
+		  </div>
         </div>
 		 <div class="col-md-8 portfolio-item no-padding">
 		  <div class="row-special">
@@ -185,20 +199,31 @@
        	<div class="col-md-5">
           <div class="portfolio-caption">
             <h4>TTR Unique VEROSPEC®</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis orci ante, varius eget volutpat eu, dignissim quis nibh. Aenean imperdiet ac arcu sit amet consectetur. Phasellus placerat metus sit amet ex lacinia, sit amet sagittis ex malesuada. Ut finibus nunc in diam gravida viverra.</p>
-          </div>
+            <p class="text-muted">TTR Unique VEROSPEC® is based on a special coating, which can only be <strong>verified mechanically with the appropriate reader</strong>. It combines two most important aspects - effective product protection and efficient processing in one innovative thermotransfer solution.</p>
+			<ul>
+			<li>Your product identification is effectively concealed</li>
+			<li>Your identification is unique and forgery-proof</li>
+			<li>Your security feature is machine readable</li>
+			<li>Your identification is usable in court</li>
+			</ul>
+
+		  
+		  </div>
         </div>
     </div>
 	
 	<div class="row mt-md-5">
         <div class="col-md-4 portfolio-item no-padding">
-            <h4>Coding</h4>
-            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-        </div>
+            <h4 class="text-uppercase">Coding</h4>
+            <p class="text-muted">Coding foils are used for printing manufacturing traceability data, such as dates and batch numbers directly on products or packaging during the production or filling process.</p>
+			<p class="text-muted">Foil coding is a simpler and cleaner process compared with inkjet or other marking alternatives. It is also highly resistant to abrasion, chemical exposures which makes it ideal for regulatory and safety marking requirements.</p>
+		</div>
 		   <div class="col-md-4 no-padding">
+		   <br>
             <img class="img-fluid" src="img/TTR/c01.jpg" alt="">
            </div>
            <div class="col-md-4 no-padding">
+		   <br>
 			<img class="img-fluid" src="img/TTR/c02.jpg" alt="">
 		   </div>		  
 		  <div class="row">
